fix copy button css in dark mode

--- a/theming/theme-dark.scss
+++ b/theming/theme-dark.scss
@@ -147,7 +147,7 @@ p {
 
 .tooltip {
     --bs-tooltip-color: $black !important;
-    --bs-tooltip-bg: $white !important;
+    // --bs-tooltip-bg: $white !important;
 }
 
 .aa-DetachedOverlay li.aa-Item[aria-selected=true] .search-item * {
